[gd_scene load_steps=2 format=3 uid="uid://b5qvp2dmbhom1"]

[ext_resource type="Script" uid="uid://dgya8diw2fdov" path="res://scenes/multiplayer_test.gd" id="1_4k8ny"]

[node name="MultiplayerTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4k8ny")

[node name="HostButton" type="Button" parent="."]
custom_minimum_size = Vector2(142, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
text = "Host"

[node name="JoinContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = 19.0
offset_right = 55.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2

[node name="Address" type="LineEdit" parent="JoinContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "127.0.0.1"

[node name="Join Button" type="Button" parent="JoinContainer"]
layout_mode = 2
text = "Join"

[connection signal="pressed" from="HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="JoinContainer/Join Button" to="." method="_on_join_button_pressed"]
